# clInAction_Note

./: CMakeLists.txt  README.md
ch1/: CMakeLists.txt  matvec.c  matvec.cl  matvec.cpp
ch2/: CMakeLists.txt  context_count.cpp  device_ext_test.c  device_ext_test.cpp  kernel_search.c  kernel_search.cpp  platform_ext_test.c  platform_ext_test.cpp  program_build.c  program_build.cpp  queue_kernel.cpp
ch3/: CMakeLists.txt  buffer_check.c  buffer_check.cpp  buffer_test.c  buffer_test.cpp  map_copy.c  map_copy.cpp
ch4/: CMakeLists.txt  double_test.cpp  float_config.c  float_config.cpp  hello_kernel.cpp  vector_bytes.cpp  vector_widths.c  vector_widths.cpp
ch5/: CMakeLists.txt  idCheck.cpp  modRound.cpp  opTest.cpp  polarRect.cpp
ch6/: CMakeLists.txt  imgShow.cpp  imgShow.h  scaleImg.cpp  simpleImg.cpp
ch7/: CMakeLists.txt  atomic.cpp  callback.cpp  profileItem.cpp  profileRead.cpp  userEvent.cpp
inc/: geterror.h  incbin.h
